# unity-lens-tomboy

./: .gitignore  AUTHORS  MANIFEST.in  README.md  autogen.sh  config.h.in  config.h.in~  configure.ac  setup.cfg  setup.py  tomboy.lens.in  unity-lens-tomboy.service
data/: tomboy.lens.in
debian/: changelog  control  copyright  files  rules
debian/source/: options
po/: .intltool-merge-cache  POTFILES.in  POTFILES.skip  en_US.po  fr.po  fr_FR.po
python/: tomboy.lens  unity-lens-tomboy  unity-tomboy-daemon
src/: Makefile.am  Makefile.in  daemon.vala  unity-lens-tomboy
src/.deps/: daemon.Po  main.Po
vala/: Makefile.am  NEWS  README
vala/data/: Makefile.am  unity-lens-tomboy.service.in
vala/po/: POTFILES.in
vala/src/: main.vala
vala/vapi/: config.vapi
